Implementing the cast list of the movie

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -33,7 +33,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.themovielist.ui.DrawableCompatTextView
-                android:id="@+id/tvHomeSeeMovieListByPopularity"
+                android:id="@+id/tvHomeSeeMovieCast"
                 style="@style/LightMediumText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
